draft__all-pages

--- a/app/contact.html
+++ b/app/contact.html
@@ -54,59 +54,58 @@
   <main class="page-container">
     <section class="navigation-arrow">
       <div class="container">
-        <svg width="1385" height="1573" viewBox="0 0 1385 1573" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g filter="url(#filter0_diiii_91_2)">
+        <svg width="1385" height="1092" viewBox="0 0 1385 1092" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g filter="url(#filter0_diiii_269_3036)">
             <rect x="30" width="424" height="70" rx="25" fill="#FFE768" />
-            <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_91_2)" />
-            <rect x="79.4975" width="2055.79" height="70" rx="35" transform="rotate(45 79.4975 0)" fill="#FFE768" />
-            <rect x="79.4975" width="2055.79" height="70" rx="35" transform="rotate(45 79.4975 0)" fill="url(#paint1_linear_91_2)" />
-            <rect x="100" width="464" height="70" rx="25" transform="rotate(90 100 0)" fill="url(#paint2_linear_91_2)" />
-            <rect x="964.866" y="885.368" width="803.695" height="70" rx="25" transform="rotate(45 964.866 885.368)" fill="#CC9BF3" />
+            <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_269_3036)" />
+            <rect x="79.4971" width="2100.34" height="70" rx="35" transform="rotate(45 79.4971 0)" fill="#FFE768" />
+            <rect x="79.4971" width="2100.34" height="70" rx="35" transform="rotate(45 79.4971 0)" fill="url(#paint1_linear_269_3036)" />
+            <rect x="100" width="464" height="70" rx="25" transform="rotate(90 100 0)" fill="url(#paint2_linear_269_3036)" />
           </g>
           <defs>
-            <filter id="filter0_diiii_91_2" x="0" y="-10" width="1552.81" height="1582.81" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <filter id="filter0_diiii_269_3036" x="0" y="-10" width="1580.17" height="1610.17" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
               <feFlood flood-opacity="0" result="BackgroundImageFix" />
               <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
               <feOffset dy="50" />
               <feGaussianBlur stdDeviation="15" />
               <feComposite in2="hardAlpha" operator="out" />
               <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.05 0" />
-              <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_91_2" />
-              <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_91_2" result="shape" />
+              <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_269_3036" />
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_269_3036" result="shape" />
               <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
               <feOffset dx="-10" dy="-10" />
               <feGaussianBlur stdDeviation="5" />
               <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
               <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
-              <feBlend mode="normal" in2="shape" result="effect2_innerShadow_91_2" />
+              <feBlend mode="normal" in2="shape" result="effect2_innerShadow_269_3036" />
               <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
               <feOffset dy="-10" />
               <feGaussianBlur stdDeviation="5" />
               <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
               <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
-              <feBlend mode="normal" in2="effect2_innerShadow_91_2" result="effect3_innerShadow_91_2" />
+              <feBlend mode="normal" in2="effect2_innerShadow_269_3036" result="effect3_innerShadow_269_3036" />
               <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
               <feOffset dx="10" dy="10" />
               <feGaussianBlur stdDeviation="5" />
               <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
               <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.2 0" />
-              <feBlend mode="normal" in2="effect3_innerShadow_91_2" result="effect4_innerShadow_91_2" />
+              <feBlend mode="normal" in2="effect3_innerShadow_269_3036" result="effect4_innerShadow_269_3036" />
               <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
               <feOffset dy="10" />
               <feGaussianBlur stdDeviation="5" />
               <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
               <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.2 0" />
-              <feBlend mode="normal" in2="effect4_innerShadow_91_2" result="effect5_innerShadow_91_2" />
+              <feBlend mode="normal" in2="effect4_innerShadow_269_3036" result="effect5_innerShadow_269_3036" />
             </filter>
-            <linearGradient id="paint0_linear_91_2" x1="454" y1="34.9999" x2="114" y2="34.9999" gradientUnits="userSpaceOnUse">
+            <linearGradient id="paint0_linear_269_3036" x1="454" y1="34.9999" x2="114" y2="34.9999" gradientUnits="userSpaceOnUse">
               <stop stop-color="#FFEE93" />
               <stop offset="1" stop-color="#FFEE95" />
             </linearGradient>
-            <linearGradient id="paint1_linear_91_2" x1="2135.29" y1="35" x2="79.4975" y2="34.9997" gradientUnits="userSpaceOnUse">
+            <linearGradient id="paint1_linear_269_3036" x1="2179.84" y1="35" x2="79.4971" y2="34.9997" gradientUnits="userSpaceOnUse">
               <stop stop-color="#FFE768" />
               <stop offset="1" stop-color="#FFEE95" />
             </linearGradient>
-            <linearGradient id="paint2_linear_91_2" x1="564" y1="35" x2="100" y2="34.9999" gradientUnits="userSpaceOnUse">
+            <linearGradient id="paint2_linear_269_3036" x1="564" y1="35" x2="100" y2="34.9999" gradientUnits="userSpaceOnUse">
               <stop stop-color="#FFEE93" />
               <stop offset="1" stop-color="#FFEE95" />
             </linearGradient>
@@ -172,67 +171,56 @@
         </div>
       </div>
     </section>
-    <section class="main-slider">
-      <div class="main-slider__text">
-        <h1 class="main-title">Мы мастера WEB-а</h1>
-        <p class="text">Мы знаем, что делаем и делаем то, что знаем.
-          <br> Мы нацелены на результат, а не на “сдачу”прокта.
+    <section class="contact">
+      <div class="contact__text">
+        <h1 class="main-title">Контакты</h1>
+        <p class="bold">Приезжайте</p>
+        <p class="text">
+          <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 10.5C21 17.5 12 23.5 12 23.5C12 23.5 3 17.5 3 10.5C3 8.11305 3.94821 5.82387 5.63604 4.13604C7.32387 2.44821 9.61305 1.5 12 1.5C14.3869 1.5 16.6761 2.44821 18.364 4.13604C20.0518 5.82387 21 8.11305 21 10.5Z" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M12 13.5C13.6569 13.5 15 12.1569 15 10.5C15 8.84315 13.6569 7.5 12 7.5C10.3431 7.5 9 8.84315 9 10.5C9 12.1569 10.3431 13.5 12 13.5Z" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>​Белореченская, 25 ст1 Люблино район, Москва, 109559
         </p>
-        <a class="btn" href="#">Написать нам</a>
-      </div>
-      <div class="background-slider">
-        <img src="img/texture.svg" alt="">
-      </div>
-    </section>
-    <section class="doing-reviews">
-      <div class="doing">
-        <img src="img/shutterstock_2058293555.png" alt="">
-        <div class="doing__text">
-          <h2 class="dop-title">Делаем свою работу хорошо*</h2>
-          <p class="text">*по мнение 8 из 10 наших клиентов</p>
-        </div>
-      </div>
-      <div class="reviews">
-        <div class="reviews__header">
-          <h2 class="dop-title">Отзывы</h2>
-          <a href="#">Все отзывы <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5 12.5H19" stroke="#A755ED" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M12 19.5L19 12.5L12 5.5" stroke="#A755ED" stroke-linecap="round" stroke-linejoin="round" />
+        <p class="bold">Пишите или звоните</p>
+        <a class="phone" href="#">
+          <img src="img/icon-park-outline_phone-off.png" alt="">
+          <div class="phone__text">8 (123) 111-11-11</div>
+        </a>
+        <a class="mail" href="#">
+          <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4 4.5H20C21.1 4.5 22 5.4 22 6.5V18.5C22 19.6 21.1 20.5 20 20.5H4C2.9 20.5 2 19.6 2 18.5V6.5C2 5.4 2.9 4.5 4 4.5Z" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M22 6.5L12 13.5L2 6.5" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>info@support.ru
+        </a>
+        <div class="contact__media">
+          <a href="#">
+            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="50" height="50" rx="15" fill="#0088CC" />
+              <path d="M13.2106 22.6696L36.2684 14.1048C37.3386 13.7324 38.2733 14.3563 37.9265 15.9153L37.9285 15.9134L34.0025 33.7322C33.7115 34.9955 32.9323 35.3027 31.8422 34.7075L25.8635 30.4625L22.9798 33.1389C22.6609 33.4461 22.3919 33.7053 21.7741 33.7053L22.1986 27.8438L33.2791 18.2C33.7613 17.7911 33.1714 17.5607 32.5357 17.9677L18.8425 26.2733L12.9396 24.4993C11.6582 24.1076 11.6303 23.2648 13.2106 22.6696Z" fill="white" />
+            </svg>
+          </a>
+          <a href="#">
+            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_281_358)">
+                <rect y="-0.112305" width="50" height="50" rx="15" fill="#1877F2" />
+                <rect y="-0.112305" width="50" height="50" rx="15" fill="#00E676" />
+                <path d="M35.6675 14.3784C32.8882 11.5406 29.0463 10 25.1226 10C16.7848 10 10.0818 16.7297 10.1635 24.9189C10.1635 27.5135 10.8992 30.0271 12.1254 32.2973L10 40L17.9291 37.973C20.1362 39.1893 22.5884 39.7568 25.0409 39.7568C33.297 39.7568 40 33.027 40 24.838C40 20.8649 38.4468 17.1351 35.6676 14.3784H35.6675ZM25.1226 37.2434C22.9155 37.2434 20.7084 36.6759 18.8283 35.5407L18.3379 35.2974L13.5968 36.5136L14.8229 31.8921L14.4959 31.4055C10.8992 25.6488 12.6158 18.027 18.5014 14.4594C24.3869 10.8919 31.9891 12.5946 35.5858 18.4324C39.1825 24.2703 37.4659 31.8108 31.5804 35.3785C29.7002 36.5946 27.4114 37.2432 25.1226 37.2432V37.2434ZM32.316 28.2434L31.4169 27.838C31.4169 27.838 30.1091 27.2704 29.2916 26.865C29.2098 26.865 29.1281 26.7839 29.0463 26.7839C28.801 26.7839 28.6376 26.865 28.4741 26.9461C28.4741 26.9461 28.3924 27.0272 27.248 28.3245C27.1662 28.4866 27.0027 28.5677 26.8392 28.5677H26.7574C26.6758 28.5677 26.5123 28.4866 26.4305 28.4056L26.0217 28.2434C25.1226 27.838 24.3052 27.3514 23.6512 26.7029C23.4877 26.5407 23.2424 26.3786 23.079 26.2164C22.5068 25.6488 21.9345 25.0001 21.5259 24.2704L21.4441 24.1082C21.3624 24.0271 21.3624 23.9461 21.2806 23.7839C21.2806 23.6218 21.2806 23.4596 21.3624 23.3785C21.3624 23.3785 21.6894 22.9731 21.9345 22.7299C22.0981 22.5676 22.1798 22.3245 22.3433 22.1623C22.5068 21.9191 22.5886 21.5948 22.5068 21.3515C22.4251 20.946 21.4441 18.7569 21.199 18.2704C21.0354 18.0271 20.872 17.9461 20.6267 17.865H19.7276C19.564 17.865 19.4006 17.9461 19.237 17.9461L19.1552 18.0271C18.9918 18.1083 18.8283 18.2704 18.6648 18.3514C18.5014 18.5137 18.4196 18.6757 18.2561 18.838C17.6839 19.5677 17.3569 20.4596 17.3569 21.3515C17.3569 22.0001 17.5204 22.6488 17.7657 23.2164L17.8475 23.4596C18.5831 25.0001 19.564 26.3786 20.872 27.5947L21.199 27.919C21.4441 28.1623 21.6894 28.3245 21.8529 28.5676C23.5695 30.0272 25.5313 31.0812 27.7384 31.6488C27.9837 31.7298 28.3106 31.7298 28.5559 31.811H29.3733C29.782 31.811 30.2724 31.6488 30.5995 31.4867C30.8446 31.3245 31.0081 31.3245 31.1716 31.1624L31.3352 31.0001C31.4986 30.8379 31.6621 30.7569 31.8256 30.5948C31.9891 30.4326 32.1525 30.2705 32.2343 30.1082C32.3978 29.7839 32.4795 29.3785 32.5613 28.9732V28.4056C32.5613 28.4056 32.4795 28.3245 32.316 28.2434Z" fill="white" />
+              </g>
+              <defs>
+                <clipPath id="clip0_281_358">
+                  <rect width="50" height="50" fill="white" />
+                </clipPath>
+              </defs>
             </svg>
           </a>
         </div>
-        <div class="reviews__body">
-          <div class="reviews__body-item">
-            <img src="img/unsplash_qfp4-Ud6Fyg.png" alt="">
-            <div class="reviews__text">
-              <div class="reviews__date">26 янв 2018</div>
-              <div class="reviews__name">Иннокентий Длиннофамильный</div>
-              <div class="reviews__subname">Соучередитель OOO «ПКФ МЕТИНВЕСТ-СЕРВИС»</div>
-              <div class="reviews__implemented">Реализовано:</div>
-              <ul>
-                <li>Разработка сайта</li>
-                <li>SEO</li>
-                <li>Техподдержка</li>
-              </ul>
-              <a href="#">Подробнее</a>
-            </div>
-          </div>
-          <div class="reviews__body-item">
-            <img src="img/unsplash_qfp4-Ud6Fyg (1).png" alt="">
-            <div class="reviews__text">
-              <div class="reviews__date">26 янв 2018</div>
-              <div class="reviews__name">Иннокентий Длиннофамильный</div>
-              <div class="reviews__subname">Соучередитель OOO «ПКФ МЕТИНВЕСТ-СЕРВИС»</div>
-              <div class="reviews__implemented">Реализовано:</div>
-              <ul>
-                <li>Разработка сайта</li>
-                <li>SEO</li>
-                <li>Техподдержка</li>
-              </ul>
-              <a href="#">Подробнее</a>
-            </div>
-          </div>
-        </div>
+        <a class="btn" href="#">Написать нам</a>
+      </div>
+      <div class="contact__map">
+        <img src="img/unsplash_EJHiB8oRzYc_1.png" alt="">
+        <svg width="102" height="126" viewBox="0 0 102 126" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M51 125.333C51 125.333 102 91.3333 102 51.6667C102 38.1406 96.6268 25.1686 87.0624 15.6042C77.4981 6.03987 64.526 0.666672 51 0.666672C37.474 0.666672 24.5019 6.03987 14.9376 15.6042C5.3732 25.1686 0 38.1406 0 51.6667C0 91.3333 51 125.333 51 125.333ZM68 51.6667C68 61.0555 60.3888 68.6667 51 68.6667C41.6112 68.6667 34 61.0555 34 51.6667C34 42.2778 41.6112 34.6667 51 34.6667C60.3888 34.6667 68 42.2778 68 51.6667Z" fill="#A755ED" />
+        </svg>
       </div>
     </section>
   </main>
