--- a/app/blocks/navigation-home.html
+++ b/app/blocks/navigation-home.html
@@ -1,63 +1,8 @@
 <section class="navigation-arrow">
+  <!--include arrow-home.pug-->
   <div class="container">
-    <svg width="1385" height="1573" viewBox="0 0 1385 1573" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g filter="url(#filter0_diiii_91_2)">
-        <rect x="30" width="424" height="70" rx="25" fill="#FFE768" />
-        <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_91_2)" />
-        <rect x="79.4975" width="2055.79" height="70" rx="35" transform="rotate(45 79.4975 0)" fill="#FFE768" />
-        <rect x="79.4975" width="2055.79" height="70" rx="35" transform="rotate(45 79.4975 0)" fill="url(#paint1_linear_91_2)" />
-        <rect x="100" width="464" height="70" rx="25" transform="rotate(90 100 0)" fill="url(#paint2_linear_91_2)" />
-        <rect x="964.866" y="885.368" width="803.695" height="70" rx="25" transform="rotate(45 964.866 885.368)" fill="#CC9BF3" />
-      </g>
-      <defs>
-        <filter id="filter0_diiii_91_2" x="0" y="-10" width="1552.81" height="1582.81" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-          <feFlood flood-opacity="0" result="BackgroundImageFix" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dy="50" />
-          <feGaussianBlur stdDeviation="15" />
-          <feComposite in2="hardAlpha" operator="out" />
-          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.05 0" />
-          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_91_2" />
-          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_91_2" result="shape" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dx="-10" dy="-10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
-          <feBlend mode="normal" in2="shape" result="effect2_innerShadow_91_2" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dy="-10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
-          <feBlend mode="normal" in2="effect2_innerShadow_91_2" result="effect3_innerShadow_91_2" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dx="10" dy="10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.2 0" />
-          <feBlend mode="normal" in2="effect3_innerShadow_91_2" result="effect4_innerShadow_91_2" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dy="10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.2 0" />
-          <feBlend mode="normal" in2="effect4_innerShadow_91_2" result="effect5_innerShadow_91_2" />
-        </filter>
-        <linearGradient id="paint0_linear_91_2" x1="454" y1="34.9999" x2="114" y2="34.9999" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#FFEE93" />
-          <stop offset="1" stop-color="#FFEE95" />
-        </linearGradient>
-        <linearGradient id="paint1_linear_91_2" x1="2135.29" y1="35" x2="79.4975" y2="34.9997" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#FFE768" />
-          <stop offset="1" stop-color="#FFEE95" />
-        </linearGradient>
-        <linearGradient id="paint2_linear_91_2" x1="564" y1="35" x2="100" y2="34.9999" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#FFEE93" />
-          <stop offset="1" stop-color="#FFEE95" />
-        </linearGradient>
-      </defs>
-    </svg>
+    <!--include arrow-home.pug-->
+    <div class="hidden-menu"></div>
     <div class="navigation-arrow__menu-text">НАВИГАЦИЯ</div>
     <div class="navigation-arrow__menu">
       <a href="#">
@@ -67,7 +12,7 @@
           <path d="M12.25 17V10H11.25" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
           <path d="M10.5 17H14" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
-        <div class="navigation-arrow__menu-txt"></div>
+        <div class="navigation-arrow__menu-txt">Кто мы</div>
       </a>
       <a href="#">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -77,7 +22,7 @@
           <path d="M15.5 11.5L18.5 14L15.5 17" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
           <path d="M8.5 11.5L5.5 14L8.5 17" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
-        <div class="navigation-arrow__menu-txt"></div>
+        <div class="navigation-arrow__menu-txt">Разработка</div>
       </a>
       <a href="#">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -88,14 +33,14 @@
           <path d="M16 7V13" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
           <path d="M6 20.5H18" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
-        <div class="navigation-arrow__menu-txt"></div>
+        <div class="navigation-arrow__menu-txt">Продвижение</div>
       </a>
       <a href="#">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M9.142 21.5855C7.48803 21.0917 5.99009 20.178 4.794 18.9335C5.17884 18.4771 5.41874 17.9162 5.483 17.3226C5.54726 16.7291 5.43296 16.1298 5.15472 15.6016C4.87649 15.0734 4.44698 14.6402 3.92115 14.3575C3.39531 14.0747 2.79708 13.9553 2.203 14.0145C2.06766 13.3515 1.99965 12.6766 2 12C2 10.955 2.16 9.947 2.458 9H2.5C3.00988 9.00016 3.51139 8.87037 3.95717 8.62287C4.40295 8.37537 4.7783 8.01834 5.04777 7.58549C5.31724 7.15264 5.47194 6.65825 5.49726 6.149C5.52259 5.63975 5.4177 5.13245 5.1925 4.675C6.3648 3.58341 7.78253 2.78991 9.326 2.3615C9.57719 2.8547 9.95992 3.26879 10.4319 3.55797C10.9038 3.84715 11.4465 4.00013 12 4C12.5535 4.00013 13.0962 3.84715 13.5681 3.55797C14.0401 3.26879 14.4228 2.8547 14.674 2.3615C16.2175 2.78991 17.6352 3.58341 18.8075 4.675C18.5807 5.13565 18.4759 5.64682 18.5031 6.15957C18.5304 6.67233 18.6888 7.1695 18.9632 7.60351C19.2376 8.03752 19.6188 8.39383 20.0703 8.63834C20.5219 8.88285 21.0286 9.00738 21.542 9C21.8465 9.97085 22.0009 10.9825 22 12C22 12.69 21.93 13.364 21.797 14.0145C21.2029 13.9553 20.6047 14.0747 20.0789 14.3575C19.553 14.6402 19.1235 15.0734 18.8453 15.6016C18.567 16.1298 18.4527 16.7291 18.517 17.3226C18.5813 17.9162 18.8212 18.4771 19.206 18.9335C18.0099 20.178 16.512 21.0917 14.858 21.5855C14.6638 20.9801 14.2824 20.4521 13.7687 20.0775C13.2551 19.7028 12.6357 19.501 12 19.501C11.3643 19.501 10.7449 19.7028 10.2313 20.0775C9.71765 20.4521 9.33623 20.9801 9.142 21.5855Z" stroke="#37474F" stroke-linejoin="round" />
           <path d="M12 15.5C12.4596 15.5 12.9148 15.4095 13.3394 15.2336C13.764 15.0577 14.1499 14.7999 14.4749 14.4749C14.7999 14.1499 15.0577 13.764 15.2336 13.3394C15.4095 12.9148 15.5 12.4596 15.5 12C15.5 11.5404 15.4095 11.0852 15.2336 10.6606C15.0577 10.236 14.7999 9.85013 14.4749 9.52513C14.1499 9.20012 13.764 8.94231 13.3394 8.76642C12.9148 8.59053 12.4596 8.5 12 8.5C11.0717 8.5 10.1815 8.86875 9.52513 9.52513C8.86875 10.1815 8.5 11.0717 8.5 12C8.5 12.9283 8.86875 13.8185 9.52513 14.4749C10.1815 15.1313 11.0717 15.5 12 15.5V15.5Z" stroke="#37474F" stroke-linejoin="round" />
         </svg>
-        <div class="navigation-arrow__menu-txt"></div>
+        <div class="navigation-arrow__menu-txt">Техподдержка</div>
       </a>
       <a href="#">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -104,7 +49,7 @@
           <path fill-rule="evenodd" clip-rule="evenodd" d="M12 19.25C12.2652 19.25 12.5196 19.1446 12.7071 18.9571C12.8946 18.7696 13 18.5152 13 18.25C13 17.9848 12.8946 17.7304 12.7071 17.5429C12.5196 17.3554 12.2652 17.25 12 17.25C11.7348 17.25 11.4804 17.3554 11.2929 17.5429C11.1054 17.7304 11 17.9848 11 18.25C11 18.5152 11.1054 18.7696 11.2929 18.9571C11.4804 19.1446 11.7348 19.25 12 19.25Z" fill="#37474F" />
           <path d="M15 2V7H20" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
-        <div class="navigation-arrow__menu-txt"></div>
+        <div class="navigation-arrow__menu-txt">Что мы умеем</div>
       </a>
       <a href="#">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -113,7 +58,12 @@
           <path d="M7 13H16" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
           <path d="M7 17H12" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
-        <div class="navigation-arrow__menu-txt"></div>
+        <div class="navigation-arrow__menu-txt">Связаться с нами</div>
+      </a>
+      <a class="nav-arrow" href="#">
+        <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 21L11 11L1 1" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
       </a>
     </div>
   </div>
