--- a/app/blocks/arrow-seo-two.html
+++ b/app/blocks/arrow-seo-two.html
@@ -1,4 +1,4 @@
-<svg width="1087" height="1107" viewBox="0 0 1087 1107" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="1087" height="1107" viewBox="0 0 1087 1107" fill="none" xmlns="http://www.w3.org/2000/svg" class="home-arrow">
   <g filter="url(#filter0_diiii_165_6676)">
     <rect x="30" width="424" height="70" rx="25" fill="#FFE768" />
     <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_165_6676)" />
