--- a/app/blocks/head.html
+++ b/app/blocks/head.html
@@ -7,5 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="js/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="libs/Magnific-Popup-master/dist/magnific-popup.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
