--- a/app/blocks/navigation-site.html
+++ b/app/blocks/navigation-site.html
@@ -1,6 +1,6 @@
 <section class="navigation-arrow">
   <div class="container">
-    <svg width="932" height="951" viewBox="0 0 932 951" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg width="932" height="951" viewBox="0 0 932 951" fill="none" xmlns="http://www.w3.org/2000/svg" class="home-arrow">
       <g filter="url(#filter0_diiii_165_1069)">
         <rect x="30" width="424" height="70" rx="25" fill="#FFE768" />
         <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_165_1069)" />
