--- a/app/seo-two.html
+++ b/app/seo-two.html
@@ -719,7 +719,7 @@
             </svg>Белореченская, 25 ст1 Люблино район, Москва, 109559
           </p>
         </div>
-        <div class="footer__menu-item">
+        <div class="footer__menu-item four">
           <h5>Как добраться?</h5>
           <div class="footer__menu-block">
             <h6>Автомобилем:</h6>
