--- a/app/contact.html
+++ b/app/contact.html
@@ -52,7 +52,7 @@
       </a>
     </div>
   </header>
-  <main class="page-container">
+  <main class="page-container contact-page">
     <section class="navigation-arrow">
       <!--include arrow-home.pug-->
       <div class="container">
@@ -146,62 +146,7 @@
         <path d="M1 21L11 11L1 1" stroke="#37474F" stroke-linecap="round" stroke-linejoin="round" />
       </symbol>
     </svg>
-    <svg width="1385" height="1092" viewBox="0 0 1385 1092" fill="none" xmlns="http://www.w3.org/2000/svg" class="home-arrow">
-      <g filter="url(#filter0_diiii_269_3036)">
-        <rect x="30" width="424" height="70" rx="25" fill="#FFE768" />
-        <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_269_3036)" />
-        <rect x="79.4971" width="2100.34" height="70" rx="35" transform="rotate(45 79.4971 0)" fill="#FFE768" />
-        <rect x="79.4971" width="2100.34" height="70" rx="35" transform="rotate(45 79.4971 0)" fill="url(#paint1_linear_269_3036)" />
-        <rect x="100" width="464" height="70" rx="25" transform="rotate(90 100 0)" fill="url(#paint2_linear_269_3036)" />
-      </g>
-      <defs>
-        <filter id="filter0_diiii_269_3036" x="0" y="-10" width="1580.17" height="1610.17" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-          <feFlood flood-opacity="0" result="BackgroundImageFix" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dy="50" />
-          <feGaussianBlur stdDeviation="15" />
-          <feComposite in2="hardAlpha" operator="out" />
-          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.05 0" />
-          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_269_3036" />
-          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_269_3036" result="shape" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dx="-10" dy="-10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
-          <feBlend mode="normal" in2="shape" result="effect2_innerShadow_269_3036" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dy="-10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
-          <feBlend mode="normal" in2="effect2_innerShadow_269_3036" result="effect3_innerShadow_269_3036" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dx="10" dy="10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.2 0" />
-          <feBlend mode="normal" in2="effect3_innerShadow_269_3036" result="effect4_innerShadow_269_3036" />
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
-          <feOffset dy="10" />
-          <feGaussianBlur stdDeviation="5" />
-          <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-          <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.2 0" />
-          <feBlend mode="normal" in2="effect4_innerShadow_269_3036" result="effect5_innerShadow_269_3036" />
-        </filter>
-        <linearGradient id="paint0_linear_269_3036" x1="454" y1="34.9999" x2="114" y2="34.9999" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#FFEE93" />
-          <stop offset="1" stop-color="#FFEE95" />
-        </linearGradient>
-        <linearGradient id="paint1_linear_269_3036" x1="2179.84" y1="35" x2="79.4971" y2="34.9997" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#FFE768" />
-          <stop offset="1" stop-color="#FFEE95" />
-        </linearGradient>
-        <linearGradient id="paint2_linear_269_3036" x1="564" y1="35" x2="100" y2="34.9999" gradientUnits="userSpaceOnUse">
-          <stop stop-color="#FFEE93" />
-          <stop offset="1" stop-color="#FFEE95" />
-        </linearGradient>
-      </defs>
+    <svg width="1385" height="1092" viewBox="0 0 1385 1092" fill="none" xmlns="http://www.w3.org/2000/svg" class="home-arrow home-arrow-1">
     </svg>
     <section class="contact">
       <div class="contact__text">
@@ -339,7 +284,7 @@
             </svg>Белореченская, 25 ст1 Люблино район, Москва, 109559
           </p>
         </div>
-        <div class="footer__menu-item">
+        <div class="footer__menu-item four">
           <h5>Как добраться?</h5>
           <div class="footer__menu-block">
             <h6>Автомобилем:</h6>
